# simple-seg

./: .gitignore  example_data.py  example_main.py  pyproject.toml  readme.md
paper/: paper.bib  paper.md  readme.md
src/simpleseg/: __init__.py  app.py  shared_variables.py
src/simpleseg/data/: dataclass.py  io.py  pathhandler.py
src/simpleseg/gui/: gui.py  gui_canvasframe.py  gui_mpl_tools.py  gui_tool_frame.py  gui_treeview.py  overlay.py
src/simpleseg/validation/: data_validation.py  dataclass_validation.py
test/: test_io.py
