[project]
name = "simpleseg"
version = "1.0.0"
requires-python = "~=3.10"
dependencies = [
    "numpy >= 1.24",
    "scikit-image >= 0.22",
    "matplotlib >= 3.7",
    "loguru == 0.7.2"
]

[project.optional-dependencies]
PDF = ["matplotlib >= 7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=42.0", "wheel", "pip >= 21.1"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
